--- a/restaurants/delice_des_sens.html
+++ b/restaurants/delice_des_sens.html
@@ -7,6 +7,9 @@
     <title>OMF - Le délice des sens</title>
     <script src="https://kit.fontawesome.com/0a24995ab9.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&family=Shrikhand&display=swap" rel="stylesheet">
 </head>
 
 <body>
