--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>ohmyfood</title>
     <script src="https://kit.fontawesome.com/0a24995ab9.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="assets/mobile_style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&family=Shrikhand&display=swap" rel="stylesheet">
@@ -14,16 +15,22 @@
 
 <body>
     <header>
-        <img src="assets/images/logo/ohmyfood.png" alt="logo du site ohmyfood">
-        <div>
-            <i class="fa-solid fa-location-dot"></i>
-            <p>Paris, Belleville</p>
+        <div class="header__title">
+            <h1>ohmyfood</h1>
         </div>
+        <form action="#" method="get" class="header__form">
+            <div>
+                <label for="city"><i class="fa-solid fa-location-dot"></i></label>
+            </div>
+            <div>
+                <input type="text" name="location" id="city" placeholder="Paris, Belleville">
+            </div>
+        </form>
     </header>
 
     <main>
         <section>
-            <h1>Réservez le menu qui vous convient</h1>
+            <h2>Réservez le menu qui vous convient</h2>
             <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
             <div>
                 <a href="#">Explorer nos restaurants</a>
@@ -31,7 +38,7 @@
         </section>
 
         <section>
-            <h1>Fonctionnement</h1>
+            <h2>Fonctionnement</h2>
             <div>
                 <a href="#">
                     <div>
@@ -62,7 +69,7 @@
         </section>
 
         <section>
-            <h1>Restaurants</h1>
+            <h2>Restaurants</h2>
             <div>
                 <div>
                     <a href="restaurants/palette_du_gout.html">
@@ -74,7 +81,7 @@
                 </div>
                 <div>
                     <div>
-                        <h2>La palette du goût</h2>
+                        <h3>La palette du goût</h3>
                         <p>Ménilmontant</p>
                     </div>
                     <div>
@@ -93,7 +100,7 @@
                 </div>
                 <div>
                     <div>
-                        <h2>La note enchantée</h2>
+                        <h3>La note enchantée</h3>
                         <p>Charonne</p>
                     </div>
                     <div>
@@ -112,7 +119,7 @@
                 </div>
                 <div>
                     <div>
-                        <h2>À la française</h2>
+                        <h3>À la française</h3>
                         <p>Cité Rouge</p>
                     </div>
                     <div>
@@ -131,7 +138,7 @@
                 </div>
                 <div>
                     <div>
-                        <h2>Le délice des sens</h2>
+                        <h3>Le délice des sens</h3>
                         <p>Folie-Méricourt</p>
                     </div>
                     <div>
