--- a/index.html
+++ b/index.html
@@ -29,43 +29,34 @@
     </header>
 
     <main>
-        <section>
-            <h2>Réservez le menu qui vous convient</h2>
-            <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
-            <div>
-                <a href="#">Explorer nos restaurants</a>
-            </div>
+        <section class="explorer">
+            <h2 class="explorer__title">Réservez le menu qui vous convient</h2>
+            <p class="explorer__p">Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
+            <button class="explorer__button" type="button">Explorer nos restaurants</button>
         </section>
 
-        <section>
-            <h2>Fonctionnement</h2>
-            <div>
-                <a href="#">
-                    <div>
-                        <p>1</p>
-                    </div>
-                    <i class="fa-solid fa-mobile-screen-button"></i>
-                    <p>Choisissez un restaurant</p>
-                </a>
-            </div>
-            <div>
-                <a href="#">
-                    <div>
-                        <p>2</p>
-                    </div>
-                    <i class="fa-solid fa-list-ul"></i>
-                    <p>Composez votre menu</p>
-                </a>
-            </div>
-            <div>
-                <a href="#">
-                    <div>
-                        <p>3</p>
-                    </div>
-                    <i class="fa-solid fa-store"></i>
-                    <p>Dégustez au restaurant</p>
-                </a>
-            </div>
+        <section class="fonctionnement">
+            <h2 class="fonctionnement__title">Fonctionnement</h2>
+            <ol>
+                <li>
+                    <button class="fonctionnement__button" type="button">
+                        <i class="fa-solid fa-mobile-screen-button"></i>
+                        Choisissez un restaurant
+                    </button>
+                </li>
+                <li>
+                    <a href="#">
+                        <i class="fa-solid fa-list-ul"></i>
+                        Composez votre menu
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <i class="fa-solid fa-store"></i>
+                        Dégustez au restaurant
+                    </a>
+                </li>
+            </ol>
         </section>
 
         <section>
