WIP mise en forme du main

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </section>
 
         <section class="fonctionnement">
-            <h2 class="fonctionnement__title">Fonctionnement</h2>
+            <h2 class="section__title fonctionnement__title">Fonctionnement</h2>
             <ol>
                 <li>
                     <button class="fonctionnement__button" type="button">
@@ -45,95 +45,97 @@
                     </button>
                 </li>
                 <li>
-                    <a href="#">
+                    <button class="fonctionnement__button" type="button">
                         <i class="fa-solid fa-list-ul"></i>
                         Composez votre menu
-                    </a>
+                    </button>
                 </li>
                 <li>
-                    <a href="#">
+                    <button class="fonctionnement__button" type="button">
                         <i class="fa-solid fa-store"></i>
                         Dégustez au restaurant
-                    </a>
+                    </button>
                 </li>
             </ol>
         </section>
 
-        <section>
-            <h2>Restaurants</h2>
-            <div>
-                <div>
-                    <a href="restaurants/palette_du_gout.html">
-                        <img src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo d'un plat servi au restaurant">
+        <section class="restaurants">
+            <h2 class="section__title restaurants__title">Restaurants</h2>
+            <div class="restaurants__allcards">
+                <div class="restaurants__singlecard">
+                    <div>
+                        <a href="restaurants/palette_du_gout.html">
+                            <img class="restaurants__img" src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo d'un plat servi au restaurant">
+                            <div class="restaurants__new">
+                                <p>Nouveau</p>
+                            </div>
+                        </a>
+                    </div>
+                    <div>
                         <div>
-                            <p>Nouveau</p>
+                            <h3>La palette du goût</h3>
+                            <p>Ménilmontant</p>
                         </div>
-                    </a>
-                </div>
-                <div>
-                    <div>
-                        <h3>La palette du goût</h3>
-                        <p>Ménilmontant</p>
-                    </div>
-                    <div>
-                        <!--  HEART ANIMATION  -->
-                    </div>
-                </div>
-            </div>
-            <div>
-                <div>
-                    <a href="restaurants/note_enchantee.html">
-                        <img src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="photo d'un plat servi au restaurant">
                         <div>
-                            <p>Nouveau</p>
+                            <!--  HEART ANIMATION  -->
                         </div>
-                    </a>
-                </div>
-                <div>
-                    <div>
-                        <h3>La note enchantée</h3>
-                        <p>Charonne</p>
-                    </div>
-                    <div>
-                        <!--  HEART ANIMATION  -->
                     </div>
                 </div>
-            </div>
-            <div>
-                <div>
-                    <a href="restaurants/a_la_francaise.html">
-                        <img src="assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="photo d'un plat servi au restaurant">
+                <div class="restaurants__singlecard">
+                    <div>
+                        <a href="restaurants/note_enchantee.html">
+                            <img class="restaurants__img" src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="photo d'un plat servi au restaurant">
+                            <div>
+                                <p>Nouveau</p>
+                            </div>
+                        </a>
+                    </div>
+                    <div>
                         <div>
-                            <p>Nouveau</p>
+                            <h3>La note enchantée</h3>
+                            <p>Charonne</p>
                         </div>
-                    </a>
-                </div>
-                <div>
-                    <div>
-                        <h3>À la française</h3>
-                        <p>Cité Rouge</p>
-                    </div>
-                    <div>
-                        <!--  HEART ANIMATION  -->
-                    </div>
-                </div>
-            </div>
-            <div>
-                <div>
-                    <a href="restaurants/delice_des_sens.html">
-                        <img src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="photo d'un plat servi au restaurant">
                         <div>
-                            <p>Nouveau</p>
+                            <!--  HEART ANIMATION  -->
                         </div>
-                    </a>
+                    </div>
                 </div>
-                <div>
+                <div class="restaurants__singlecard">
                     <div>
-                        <h3>Le délice des sens</h3>
-                        <p>Folie-Méricourt</p>
+                        <a href="restaurants/a_la_francaise.html">
+                            <img class="restaurants__img" src="assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="photo d'un plat servi au restaurant">
+                            <div>
+                                <p>Nouveau</p>
+                            </div>
+                        </a>
                     </div>
                     <div>
-                        <!--  HEART ANIMATION  -->
+                        <div>
+                            <h3>À la française</h3>
+                            <p>Cité Rouge</p>
+                        </div>
+                        <div>
+                            <!--  HEART ANIMATION  -->
+                        </div>
+                    </div>
+                </div>
+                <div class="restaurants__singlecard">
+                    <div>
+                        <a href="restaurants/delice_des_sens.html">
+                            <img class="restaurants__img" src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="photo d'un plat servi au restaurant">
+                            <div>
+                                <p>Nouveau</p>
+                            </div>
+                        </a>
+                    </div>
+                    <div>
+                        <div>
+                            <h3>Le délice des sens</h3>
+                            <p>Folie-Méricourt</p>
+                        </div>
+                        <div>
+                            <!--  HEART ANIMATION  -->
+                        </div>
                     </div>
                 </div>
             </div>
