--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
 <body>
     <header>
-        <div class="header__title">
-            <h1>ohmyfood</h1>
+        <div class="header__maintitle">
+            <h1 class="header__title">ohmyfood</h1>
         </div>
         <form action="#" method="get" class="header__form">
             <div>
@@ -62,99 +62,83 @@
         <section class="restaurants">
             <h2 class="section__title restaurants__title">Restaurants</h2>
             <div class="restaurants__allcards">
-                <div class="restaurants__singlecard">
-                    <div>
-                        <a href="restaurants/palette_du_gout.html">
-                            <img class="restaurants__img" src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo d'un plat servi au restaurant">
-                            <div class="restaurants__new">
-                                <p>Nouveau</p>
+                <a class="restaurants__link" href="restaurants/palette_du_gout.html">
+                    <article class="restaurants__singlecard">
+                        <img class="restaurants__img" src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo d'un plat servi au restaurant">
+                        <div class="restaurants__details">
+                            <div class="restaurants__identity">
+                                <h3 class="restaurants__name">La palette du goût</h3>
+                                <p class="restaurants__city">Ménilmontant</p>
                             </div>
-                        </a>
-                    </div>
-                    <div>
-                        <div>
-                            <h3>La palette du goût</h3>
-                            <p>Ménilmontant</p>
-                        </div>
-                        <div>
-                            <!--  HEART ANIMATION  -->
-                        </div>
-                    </div>
-                </div>
-                <div class="restaurants__singlecard">
-                    <div>
-                        <a href="restaurants/note_enchantee.html">
-                            <img class="restaurants__img" src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="photo d'un plat servi au restaurant">
-                            <div>
-                                <p>Nouveau</p>
+                            <div class="restaurants__favorite">
+                                <!--  HEART ANIMATION  -->
+                                <p>♥</p>
                             </div>
-                        </a>
-                    </div>
-                    <div>
-                        <div>
-                            <h3>La note enchantée</h3>
-                            <p>Charonne</p>
                         </div>
-                        <div>
-                            <!--  HEART ANIMATION  -->
-                        </div>
-                    </div>
-                </div>
-                <div class="restaurants__singlecard">
-                    <div>
-                        <a href="restaurants/a_la_francaise.html">
-                            <img class="restaurants__img" src="assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="photo d'un plat servi au restaurant">
-                            <div>
-                                <p>Nouveau</p>
+                    </article>
+                </a>
+                <a class="restaurants__link" href="restaurants/note_enchantee.html">
+                    <article class="restaurants__singlecard">
+                        <img class="restaurants__img restaurants__img--position" src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="photo d'un plat servi au restaurant">
+                        <div class="restaurants__details">
+                            <div class="restaurants__identity">
+                                <h3 class="restaurants__name">La note enchantée</h3>
+                                <p class="restaurants__city">Charonne</p>
                             </div>
-                        </a>
-                    </div>
-                    <div>
-                        <div>
-                            <h3>À la française</h3>
-                            <p>Cité Rouge</p>
-                        </div>
-                        <div>
-                            <!--  HEART ANIMATION  -->
-                        </div>
-                    </div>
-                </div>
-                <div class="restaurants__singlecard">
-                    <div>
-                        <a href="restaurants/delice_des_sens.html">
-                            <img class="restaurants__img" src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="photo d'un plat servi au restaurant">
-                            <div>
-                                <p>Nouveau</p>
+                            <div class="restaurants__favorite">
+                                <!--  HEART ANIMATION  -->
+                                <p>♥</p>
                             </div>
-                        </a>
-                    </div>
-                    <div>
-                        <div>
-                            <h3>Le délice des sens</h3>
-                            <p>Folie-Méricourt</p>
                         </div>
-                        <div>
-                            <!--  HEART ANIMATION  -->
+                    </article>
+                </a>
+                <a class="restaurants__link" href="restaurants/a_la_francaise.html">
+                    <article class="restaurants__singlecard">
+                        <img class="restaurants__img" src="assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="photo d'un plat servi au restaurant">
+                        <div class="restaurants__details">
+                            <div class="restaurants__identity">
+                                <h3 class="restaurants__name">À la française</h3>
+                                <p class="restaurants__city">Cité Rouge</p>
+                            </div>
+                            <div class="restaurants__favorite">
+                                <!--  HEART ANIMATION  -->
+                                <p>♥</p>
+                            </div>
                         </div>
-                    </div>
-                </div>
+                    </article>
+                </a>
+                <a class="restaurants__link" href="restaurants/delice_des_sens.html">
+                    <article class="restaurants__singlecard">
+                        <img class="restaurants__img" src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="photo d'un plat servi au restaurant">
+                        <div class="restaurants__details">
+                            <div class="restaurants__identity">
+                                <h3 class="restaurants__name">Le délice des sens</h3>
+                                <p class="restaurants__city">Folie-Méricourt</p>
+                            </div>
+                            <div class="restaurants__favorite">
+                                <!--  HEART ANIMATION  -->
+                                <p>♥</p>
+                            </div>
+                        </div>
+                    </article>
+                </a>
             </div>
         </section>
     </main>
 
     <footer>
-        <img src="assets/images/logo/ohmyfood.png" alt="logo du site ohmyfood">
+        <h4 class="footer__title">ohmyfood</h4>
         <ul>
-            <li>
+            <li class="footer__proposal">
                 <i class="fa-solid fa-utensils"></i>
-                <a href="#">Proposer un restaurant</a>
+                <a class="footer__link footer__bold" href="#">Proposer un restaurant</a>
             </li>
-            <li>
+            <li class="footer__partner">
                 <i class="fa-solid fa-handshake-angle"></i>
-                <a href="#">Devenir partenaire</a>
+                <a class="footer__link footer__bold" href="#">Devenir partenaire</a>
             </li>
-            <li><a href="#">Mentions légales</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a class="footer__link footer__light" href="#">Mentions légales</a></li>
+            <li><a class="footer__link footer__light" href="#">Contact</a></li>
         </ul>
     </footer>
 
