--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="fr">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -62,66 +61,162 @@
         <section class="restaurants">
             <h2 class="section__title restaurants__title">Restaurants</h2>
             <div class="restaurants__allcards">
-                <a class="restaurants__link" href="restaurants/palette_du_gout.html">
-                    <article class="restaurants__singlecard">
+                <article class="restaurants__singlecard">
+                    <a class="restaurants__link restaurants__link--1" href="restaurants/palette_du_gout.html">
                         <img class="restaurants__img" src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo d'un plat servi au restaurant">
-                        <div class="restaurants__details">
-                            <div class="restaurants__identity">
-                                <h3 class="restaurants__name">La palette du goût</h3>
-                                <p class="restaurants__city">Ménilmontant</p>
-                            </div>
-                            <div class="restaurants__favorite">
-                                <!--  HEART ANIMATION  -->
-                                <p>♥</p>
+                        <div class="restaurants__tag restaurants__tag--1">
+                            <p>Nouveau</p>
+                        </div>
+                    </a>
+                    <div class="restaurants__details">
+                        <div class="restaurants__identity">
+                            <h3 class="restaurants__name">La palette du goût</h3>
+                            <p class="restaurants__city">Ménilmontant</p>
+                        </div>
+                        <div class="restaurants__favorite">
+                            <input class="restaurants__checkbox" type="checkbox">
+                            <div class="restaurants__svg">
+                                <svg class="restaurants__svg--empty" viewBox="0 -0.5 32 32">
+                                    <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                                        <g transform="translate(-100.000000, -880.000000)" fill="#101010">
+                                            <path d="M128,893.682 L116,908 L104,893.623 C102.565,891.629 102,890.282 102,888.438 C102,884.999 104.455,881.904 108,881.875 C110.916,881.851 114.222,884.829 116,887.074 C117.731,884.908 121.084,881.875 124,881.875 C127.451,881.875 130,884.999 130,888.438 C130,890.282 129.553,891.729 128,893.682 L128,893.682 Z M124,880 C120.667,880 118.145,881.956 116,884 C113.957,881.831 111.333,880 108,880 C103.306,880 100,884.036 100,888.438 C100,890.799 100.967,892.499 102.026,894.097 L114.459,909.003 C115.854,910.48 116.118,910.48 117.513,909.003 L129.974,894.097 C131.22,892.499 132,890.799 132,888.438 C132,884.036 128.694,880 124,880 L124,880 Z"></path>
+                                        </g>
+                                    </g>
+                                </svg>
+                                <svg class="restaurants__svg--full" viewBox="0 -0.5 32 32">
+                                    <defs>
+                                        <linearGradient id="restaurants__svg--gradient">
+                                            <stop offset="0%" stop-color="var(--primary-color)" />
+                                            <stop offset="100%" stop-color="var(--secondary-color)" />
+                                        </linearGradient>
+                                    </defs>
+                                    <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                                        <g transform="translate(-102.000000, -882.000000)" fill="url(#restaurants__svg--gradient)">
+                                            <path d="M126,882 C122.667,882 119.982,883.842 117.969,886.235 C116.013,883.76 113.333,882 110,882 C105.306,882 102,886.036 102,890.438 C102,892.799 102.967,894.499 104.026,896.097 L116.459,911.003 C117.854,912.312 118.118,912.312 119.513,911.003 L131.974,896.097 C133.22,894.499 134,892.799 134,890.438 C134,886.036 130.694,882 126,882"></path>
+                                        </g>
+                                    </g>
+                                </svg>
                             </div>
                         </div>
-                    </article>
-                </a>
-                <a class="restaurants__link" href="restaurants/note_enchantee.html">
-                    <article class="restaurants__singlecard">
+                    </div>
+                </article>
+                <article class="restaurants__singlecard">
+                    <a class="restaurants__link restaurants__link--2" href="restaurants/note_enchantee.html">
                         <img class="restaurants__img restaurants__img--position" src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="photo d'un plat servi au restaurant">
-                        <div class="restaurants__details">
-                            <div class="restaurants__identity">
-                                <h3 class="restaurants__name">La note enchantée</h3>
-                                <p class="restaurants__city">Charonne</p>
-                            </div>
-                            <div class="restaurants__favorite">
-                                <!--  HEART ANIMATION  -->
-                                <p>♥</p>
+                        <div class="restaurants__tag restaurants__tag--2">
+                            <p>Nouveau</p>
+                        </div>
+                    </a>
+                    <div class="restaurants__details">
+                        <div class="restaurants__identity">
+                            <h3 class="restaurants__name">La note enchantée</h3>
+                            <p class="restaurants__city">Charonne</p>
+                        </div>
+                        <div class="restaurants__favorite">
+                            <input class="restaurants__checkbox" type="checkbox">
+                            <div class="restaurants__svg">
+                                <svg class="restaurants__svg--empty" viewBox="0 -0.5 32 32">
+                                    <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                                        <g transform="translate(-100.000000, -880.000000)" fill="#101010">
+                                            <path d="M128,893.682 L116,908 L104,893.623 C102.565,891.629 102,890.282 102,888.438 C102,884.999 104.455,881.904 108,881.875 C110.916,881.851 114.222,884.829 116,887.074 C117.731,884.908 121.084,881.875 124,881.875 C127.451,881.875 130,884.999 130,888.438 C130,890.282 129.553,891.729 128,893.682 L128,893.682 Z M124,880 C120.667,880 118.145,881.956 116,884 C113.957,881.831 111.333,880 108,880 C103.306,880 100,884.036 100,888.438 C100,890.799 100.967,892.499 102.026,894.097 L114.459,909.003 C115.854,910.48 116.118,910.48 117.513,909.003 L129.974,894.097 C131.22,892.499 132,890.799 132,888.438 C132,884.036 128.694,880 124,880 L124,880 Z"></path>
+                                        </g>
+                                    </g>
+                                </svg>
+                                <svg class="restaurants__svg--full" viewBox="0 -0.5 32 32">
+                                    <defs>
+                                        <linearGradient id="restaurants__svg--gradient">
+                                            <stop offset="0%" stop-color="var(--primary-color)" />
+                                            <stop offset="100%" stop-color="var(--secondary-color)" />
+                                        </linearGradient>
+                                    </defs>
+                                    <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                                        <g transform="translate(-102.000000, -882.000000)" fill="url(#restaurants__svg--gradient)">
+                                            <path d="M126,882 C122.667,882 119.982,883.842 117.969,886.235 C116.013,883.76 113.333,882 110,882 C105.306,882 102,886.036 102,890.438 C102,892.799 102.967,894.499 104.026,896.097 L116.459,911.003 C117.854,912.312 118.118,912.312 119.513,911.003 L131.974,896.097 C133.22,894.499 134,892.799 134,890.438 C134,886.036 130.694,882 126,882"></path>
+                                        </g>
+                                    </g>
+                                </svg>
                             </div>
                         </div>
-                    </article>
-                </a>
-                <a class="restaurants__link" href="restaurants/a_la_francaise.html">
-                    <article class="restaurants__singlecard">
+                    </div>
+                </article>
+                <article class="restaurants__singlecard">
+                    <a class="restaurants__link restaurants__link--3" href="restaurants/a_la_francaise.html">
                         <img class="restaurants__img" src="assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="photo d'un plat servi au restaurant">
-                        <div class="restaurants__details">
-                            <div class="restaurants__identity">
-                                <h3 class="restaurants__name">À la française</h3>
-                                <p class="restaurants__city">Cité Rouge</p>
-                            </div>
-                            <div class="restaurants__favorite">
-                                <!--  HEART ANIMATION  -->
-                                <p>♥</p>
+                        <div class="restaurants__tag restaurants__tag--3">
+                            <p>Nouveau</p>
+                        </div>
+                    </a>
+                    <div class="restaurants__details">
+                        <div class="restaurants__identity">
+                            <h3 class="restaurants__name">À la française</h3>
+                            <p class="restaurants__city">Cité Rouge</p>
+                        </div>
+                        <div class="restaurants__favorite">
+                            <input class="restaurants__checkbox" type="checkbox">
+                            <div class="restaurants__svg">
+                                <svg class="restaurants__svg--empty" viewBox="0 -0.5 32 32">
+                                    <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                                        <g transform="translate(-100.000000, -880.000000)" fill="#101010">
+                                            <path d="M128,893.682 L116,908 L104,893.623 C102.565,891.629 102,890.282 102,888.438 C102,884.999 104.455,881.904 108,881.875 C110.916,881.851 114.222,884.829 116,887.074 C117.731,884.908 121.084,881.875 124,881.875 C127.451,881.875 130,884.999 130,888.438 C130,890.282 129.553,891.729 128,893.682 L128,893.682 Z M124,880 C120.667,880 118.145,881.956 116,884 C113.957,881.831 111.333,880 108,880 C103.306,880 100,884.036 100,888.438 C100,890.799 100.967,892.499 102.026,894.097 L114.459,909.003 C115.854,910.48 116.118,910.48 117.513,909.003 L129.974,894.097 C131.22,892.499 132,890.799 132,888.438 C132,884.036 128.694,880 124,880 L124,880 Z"></path>
+                                        </g>
+                                    </g>
+                                </svg>
+                                <svg class="restaurants__svg--full" viewBox="0 -0.5 32 32">
+                                    <defs>
+                                        <linearGradient id="restaurants__svg--gradient">
+                                            <stop offset="0%" stop-color="var(--primary-color)" />
+                                            <stop offset="100%" stop-color="var(--secondary-color)" />
+                                        </linearGradient>
+                                    </defs>
+                                    <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                                        <g transform="translate(-102.000000, -882.000000)" fill="url(#restaurants__svg--gradient)">
+                                            <path d="M126,882 C122.667,882 119.982,883.842 117.969,886.235 C116.013,883.76 113.333,882 110,882 C105.306,882 102,886.036 102,890.438 C102,892.799 102.967,894.499 104.026,896.097 L116.459,911.003 C117.854,912.312 118.118,912.312 119.513,911.003 L131.974,896.097 C133.22,894.499 134,892.799 134,890.438 C134,886.036 130.694,882 126,882"></path>
+                                        </g>
+                                    </g>
+                                </svg>
                             </div>
                         </div>
-                    </article>
-                </a>
-                <a class="restaurants__link" href="restaurants/delice_des_sens.html">
-                    <article class="restaurants__singlecard">
+                    </div>
+                </article>
+                <article class="restaurants__singlecard">
+                    <a class="restaurants__link restaurants__link--4" href="restaurants/delice_des_sens.html">
                         <img class="restaurants__img" src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="photo d'un plat servi au restaurant">
-                        <div class="restaurants__details">
-                            <div class="restaurants__identity">
-                                <h3 class="restaurants__name">Le délice des sens</h3>
-                                <p class="restaurants__city">Folie-Méricourt</p>
-                            </div>
-                            <div class="restaurants__favorite">
-                                <!--  HEART ANIMATION  -->
-                                <p>♥</p>
+                        <div class="restaurants__tag restaurants__tag--4">
+                            <p>Nouveau</p>
+                        </div>
+                    </a>
+                    <div class="restaurants__details">
+                        <div class="restaurants__identity">
+                            <h3 class="restaurants__name">Le délice des sens</h3>
+                            <p class="restaurants__city">Folie-Méricourt</p>
+                        </div>
+                        <div class="restaurants__favorite">
+                            <input class="restaurants__checkbox" type="checkbox">
+                            <div class="restaurants__svg">
+                                <svg class="restaurants__svg--empty" viewBox="0 -0.5 32 32">
+                                    <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                                        <g transform="translate(-100.000000, -880.000000)" fill="#101010">
+                                            <path d="M128,893.682 L116,908 L104,893.623 C102.565,891.629 102,890.282 102,888.438 C102,884.999 104.455,881.904 108,881.875 C110.916,881.851 114.222,884.829 116,887.074 C117.731,884.908 121.084,881.875 124,881.875 C127.451,881.875 130,884.999 130,888.438 C130,890.282 129.553,891.729 128,893.682 L128,893.682 Z M124,880 C120.667,880 118.145,881.956 116,884 C113.957,881.831 111.333,880 108,880 C103.306,880 100,884.036 100,888.438 C100,890.799 100.967,892.499 102.026,894.097 L114.459,909.003 C115.854,910.48 116.118,910.48 117.513,909.003 L129.974,894.097 C131.22,892.499 132,890.799 132,888.438 C132,884.036 128.694,880 124,880 L124,880 Z"></path>
+                                        </g>
+                                    </g>
+                                </svg>
+                                <svg class="restaurants__svg--full" viewBox="0 -0.5 32 32">
+                                    <defs>
+                                        <linearGradient id="restaurants__svg--gradient">
+                                            <stop offset="0%" stop-color="var(--primary-color)" />
+                                            <stop offset="100%" stop-color="var(--secondary-color)" />
+                                        </linearGradient>
+                                    </defs>
+                                    <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                                        <g transform="translate(-102.000000, -882.000000)" fill="url(#restaurants__svg--gradient)">
+                                            <path d="M126,882 C122.667,882 119.982,883.842 117.969,886.235 C116.013,883.76 113.333,882 110,882 C105.306,882 102,886.036 102,890.438 C102,892.799 102.967,894.499 104.026,896.097 L116.459,911.003 C117.854,912.312 118.118,912.312 119.513,911.003 L131.974,896.097 C133.22,894.499 134,892.799 134,890.438 C134,886.036 130.694,882 126,882"></path>
+                                        </g>
+                                    </g>
+                                </svg>
                             </div>
                         </div>
-                    </article>
-                </a>
+                    </div>
+                </article>
             </div>
         </section>
     </main>
@@ -144,3 +239,4 @@
 
     <!--  LOADER  -->
 </body>
+</html>
