Ajout des pages restaurants

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ohmyfood</title>
     <script src="https://kit.fontawesome.com/0a24995ab9.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="assets/style.css">
-    <link rel="stylesheet" href="assets/mobile_style.css">
+    <link rel="stylesheet" href="assets/common_style.css">
+    <link rel="stylesheet" href="assets/mobile_homepage_style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&family=Shrikhand&display=swap" rel="stylesheet">
