WIP des animations

--- a/restaurants/palette_du_gout.html
+++ b/restaurants/palette_du_gout.html
@@ -54,10 +54,15 @@
             <div class="restaurant__setmenu">
                 <h2 class="restaurant__menutitle">ENTRÉES</h2>
                 <div class="restaurant__card">
-                    <h3 class="restaurant__dish">Fricassée d'escargots</h3>
-                    <div class="restaurant__dishdetail">
-                        <p class="restaurant__dishdetail--light">Au piment d'Espelette</p>
-                        <p class="restaurant__dishdetail--bold">25€</p>
+                    <div class="restaurant__card--unselected">
+                        <h3 class="restaurant__dish">Fricassée d'escargots</h3>
+                        <div class="restaurant__dishdetail">
+                            <p class="restaurant__dishdetail--light">Au piment d'Espelette</p>
+                            <p class="restaurant__dishdetail--bold">25€</p>
+                        </div>
+                    </div>
+                    <div class="restaurant__card--selected">
+                        <i class="fa-solid fa-circle-check"></i>
                     </div>
                 </div>
                 <div class="restaurant__card">
