--- a/restaurants/a_la_francaise.html
+++ b/restaurants/a_la_francaise.html
@@ -54,72 +54,126 @@
             <div class="restaurant__setmenu">
                 <h2 class="restaurant__menutitle">ENTRÉES</h2>
                 <div class="restaurant__card">
-                    <h3 class="restaurant__dish">Tartare de poulpe acidulé</h3>
-                    <div class="restaurant__dishdetail">
-                        <p class="restaurant__dishdetail--light">Aux zestes d'orange</p>
-                        <p class="restaurant__dishdetail--bold">25€</p>
+                    <input class="restaurant__card--checkbox" id="dish-selected-s1" type="checkbox">
+                    <label for="dish-selected-s1" class="restaurant__card--unselected">
+                        <h3 class="restaurant__dish">Tartare de poulpe acidulé</h3>
+                        <div class="restaurant__dishdetail">
+                            <p class="restaurant__dishdetail--light">Aux zestes d'orange</p>
+                            <p class="restaurant__dishdetail--bold">25€</p>
+                        </div>
+                    </label>
+                    <div class="restaurant__card--selected">
+                        <i class="fa-solid fa-circle-check"></i>
                     </div>
                 </div>
                 <div class="restaurant__card">
-                    <h3 class="restaurant__dish">Velouté de légumes d'antan</h3>
-                    <div class="restaurant__dishdetail">
-                        <p class="restaurant__dishdetail--light">Carotte, panais, topinambour</p>
-                        <p class="restaurant__dishdetail--bold">35€</p>
+                    <input class="restaurant__card--checkbox" id="dish-selected-s2" type="checkbox">
+                    <label for="dish-selected-s2" class="restaurant__card--unselected">
+                        <h3 class="restaurant__dish">Velouté de légumes d'antan</h3>
+                        <div class="restaurant__dishdetail">
+                            <p class="restaurant__dishdetail--light">Carotte, panais, topinambour</p>
+                            <p class="restaurant__dishdetail--bold">35€</p>
+                        </div>
+                    </label>
+                    <div class="restaurant__card--selected">
+                        <i class="fa-solid fa-circle-check"></i>
                     </div>
                 </div>
                 <div class="restaurant__card">
-                    <h3 class="restaurant__dish">Soupe à l'oignon</h3>
-                    <div class="restaurant__dishdetail">
-                        <p class="restaurant__dishdetail--light">Revisitée</p>
-                        <p class="restaurant__dishdetail--bold">20€</p>
+                    <input class="restaurant__card--checkbox" id="dish-selected-s3" type="checkbox">
+                    <label for="dish-selected-s3" class="restaurant__card--unselected">
+                        <h3 class="restaurant__dish">Soupe à l'oignon</h3>
+                        <div class="restaurant__dishdetail">
+                            <p class="restaurant__dishdetail--light">Revisitée</p>
+                            <p class="restaurant__dishdetail--bold">20€</p>
+                        </div>
+                    </label>
+                    <div class="restaurant__card--selected">
+                        <i class="fa-solid fa-circle-check"></i>
                     </div>
                 </div>
             </div>
             <div class="restaurant__setmenu">
                 <h2 class="restaurant__menutitle">PLATS</h2>
                 <div class="restaurant__card">
-                    <h3 class="restaurant__dish">Coquilles Saint-Jacques</h3>
-                    <div class="restaurant__dishdetail">
-                        <p class="restaurant__dishdetail--light">Accompagnées d'une purée de panais</p>
-                        <p class="restaurant__dishdetail--bold">40€</p>
+                    <input class="restaurant__card--checkbox" id="dish-selected-m1" type="checkbox">
+                    <label for="dish-selected-m1" class="restaurant__card--unselected">
+                        <h3 class="restaurant__dish">Coquilles Saint-Jacques</h3>
+                        <div class="restaurant__dishdetail">
+                            <p class="restaurant__dishdetail--light">Accompagnées d'une purée de panais</p>
+                            <p class="restaurant__dishdetail--bold">40€</p>
+                        </div>
+                    </label>
+                    <div class="restaurant__card--selected">
+                        <i class="fa-solid fa-circle-check"></i>
                     </div>
                 </div>
                 <div class="restaurant__card">
-                    <h3 class="restaurant__dish">Magret de canard</h3>
-                    <div class="restaurant__dishdetail">
-                        <p class="restaurant__dishdetail--light">Et parmentier de pommes de terre</p>
-                        <p class="restaurant__dishdetail--bold">35€</p>
+                    <input class="restaurant__card--checkbox" id="dish-selected-m2" type="checkbox">
+                    <label for="dish-selected-m2" class="restaurant__card--unselected">
+                        <h3 class="restaurant__dish">Magret de canard</h3>
+                        <div class="restaurant__dishdetail">
+                            <p class="restaurant__dishdetail--light">Et parmentier de pommes de terre</p>
+                            <p class="restaurant__dishdetail--bold">35€</p>
+                        </div>
+                    </label>
+                    <div class="restaurant__card--selected">
+                        <i class="fa-solid fa-circle-check"></i>
                     </div>
                 </div>
                 <div class="restaurant__card">
-                    <h3 class="restaurant__dish">Pigeonneau d’Ille-et-Vilaine</h3>
-                    <div class="restaurant__dishdetail">
-                        <p class="restaurant__dishdetail--light">Sur son lit de gnocchis aux légumes</p>
-                        <p class="restaurant__dishdetail--bold">44€</p>
+                    <input class="restaurant__card--checkbox" id="dish-selected-m3" type="checkbox">
+                    <label for="dish-selected-m3" class="restaurant__card--unselected">
+                        <h3 class="restaurant__dish">Pigeonneau d’Ille-et-Vilaine</h3>
+                        <div class="restaurant__dishdetail">
+                            <p class="restaurant__dishdetail--light">Sur son lit de gnocchis aux légumes</p>
+                            <p class="restaurant__dishdetail--bold">44€</p>
+                        </div>
+                    </label>
+                    <div class="restaurant__card--selected">
+                        <i class="fa-solid fa-circle-check"></i>
                     </div>
                 </div>
             </div>
             <div class="restaurant__setmenu">
                 <h2 class="restaurant__menutitle">DESSERTS</h2>
                 <div class="restaurant__card">
-                    <h3 class="restaurant__dish">Pétales de violettes glacés</h3>
-                    <div class="restaurant__dishdetail">
-                        <p class="restaurant__dishdetail--light">Et purée de noisettes</p>
-                        <p class="restaurant__dishdetail--bold">18€</p>
+                    <input class="restaurant__card--checkbox" id="dish-selected-d1" type="checkbox">
+                    <label for="dish-selected-d1" class="restaurant__card--unselected">
+                        <h3 class="restaurant__dish">Pétales de violettes glacés</h3>
+                        <div class="restaurant__dishdetail">
+                            <p class="restaurant__dishdetail--light">Et purée de noisettes</p>
+                            <p class="restaurant__dishdetail--bold">18€</p>
+                        </div>
+                    </label>
+                    <div class="restaurant__card--selected">
+                        <i class="fa-solid fa-circle-check"></i>
                     </div>
                 </div>
                 <div class="restaurant__card">
-                    <h3 class="restaurant__dish">Fondant au chocolat</h3>
-                    <div class="restaurant__dishdetail">
-                        <p class="restaurant__dishdetail--light">Revisité</p>
-                        <p class="restaurant__dishdetail--bold">22€</p>
+                    <input class="restaurant__card--checkbox" id="dish-selected-d2" type="checkbox">
+                    <label for="dish-selected-d2" class="restaurant__card--unselected">
+                        <h3 class="restaurant__dish">Fondant au chocolat</h3>
+                        <div class="restaurant__dishdetail">
+                            <p class="restaurant__dishdetail--light">Revisité</p>
+                            <p class="restaurant__dishdetail--bold">22€</p>
+                        </div>
+                    </label>
+                    <div class="restaurant__card--selected">
+                        <i class="fa-solid fa-circle-check"></i>
                     </div>
                 </div>
                 <div class="restaurant__card">
-                    <h3 class="restaurant__dish">Millefeuille croustillant</h3>
-                    <div class="restaurant__dishdetail">
-                        <p class="restaurant__dishdetail--light">Myrtilles et pâte d’amande</p>
-                        <p class="restaurant__dishdetail--bold">23€</p>
+                    <input class="restaurant__card--checkbox" id="dish-selected-d3" type="checkbox">
+                    <label for="dish-selected-d3" class="restaurant__card--unselected">
+                        <h3 class="restaurant__dish">Millefeuille croustillant</h3>
+                        <div class="restaurant__dishdetail">
+                            <p class="restaurant__dishdetail--light">Myrtilles et pâte d’amande</p>
+                            <p class="restaurant__dishdetail--bold">23€</p>
+                        </div>
+                    </label>
+                    <div class="restaurant__card--selected">
+                        <i class="fa-solid fa-circle-check"></i>
                     </div>
                 </div>
             </div>
@@ -139,7 +193,7 @@
                 <a class="footer__link footer__bold" href="#">Devenir partenaire</a>
             </li>
             <li><a class="footer__link footer__light" href="#">Mentions légales</a></li>
-            <li><a class="footer__link footer__light" href="#">Contact</a></li>
+            <li><a class="footer__link footer__light" href="mailto:ohmyfood@example.com">Contact</a></li>
         </ul>
     </footer>
 </body>
