--- a/restaurants/delice_des_sens.html
+++ b/restaurants/delice_des_sens.html
@@ -54,72 +54,126 @@
             <div class="restaurant__setmenu">
                 <h2 class="restaurant__menutitle">ENTRÉES</h2>
                 <div class="restaurant__card">
-                    <h3 class="restaurant__dish">Tartare de thon</h3>
-                    <div class="restaurant__dishdetail">
-                        <p class="restaurant__dishdetail--light">Assaisonné au yuzu</p>
-                        <p class="restaurant__dishdetail--bold">25€</p>
+                    <input class="restaurant__card--checkbox" id="dish-selected-s1" type="checkbox">
+                    <label for="dish-selected-s1" class="restaurant__card--unselected">
+                        <h3 class="restaurant__dish">Tartare de thon</h3>
+                        <div class="restaurant__dishdetail">
+                            <p class="restaurant__dishdetail--light">Assaisonné au yuzu</p>
+                            <p class="restaurant__dishdetail--bold">25€</p>
+                        </div>
+                    </label>
+                    <div class="restaurant__card--selected">
+                        <i class="fa-solid fa-circle-check"></i>
                     </div>
                 </div>
                 <div class="restaurant__card">
-                    <h3 class="restaurant__dish">Bouchée de homard croustillant</h3>
-                    <div class="restaurant__dishdetail">
-                        <p class="restaurant__dishdetail--light">Et sa farandole de petits légumes</p>
-                        <p class="restaurant__dishdetail--bold">35€</p>
+                    <input class="restaurant__card--checkbox" id="dish-selected-s2" type="checkbox">
+                    <label for="dish-selected-s2" class="restaurant__card--unselected">
+                        <h3 class="restaurant__dish">Bouchée de homard croustillant</h3>
+                        <div class="restaurant__dishdetail">
+                            <p class="restaurant__dishdetail--light">Et sa farandole de petits légumes</p>
+                            <p class="restaurant__dishdetail--bold">35€</p>
+                        </div>
+                    </label>
+                    <div class="restaurant__card--selected">
+                        <i class="fa-solid fa-circle-check"></i>
                     </div>
                 </div>
                 <div class="restaurant__card">
-                    <h3 class="restaurant__dish">Velouté de cèpes</h3>
-                    <div class="restaurant__dishdetail">
-                        <p class="restaurant__dishdetail--light">Aux truffes</p>
-                        <p class="restaurant__dishdetail--bold">20€</p>
+                    <input class="restaurant__card--checkbox" id="dish-selected-s3" type="checkbox">
+                    <label for="dish-selected-s3" class="restaurant__card--unselected">
+                        <h3 class="restaurant__dish">Velouté de cèpes</h3>
+                        <div class="restaurant__dishdetail">
+                            <p class="restaurant__dishdetail--light">Aux truffes</p>
+                            <p class="restaurant__dishdetail--bold">20€</p>
+                        </div>
+                    </label>
+                    <div class="restaurant__card--selected">
+                        <i class="fa-solid fa-circle-check"></i>
                     </div>
                 </div>
             </div>
             <div class="restaurant__setmenu">
                 <h2 class="restaurant__menutitle">PLATS</h2>
                 <div class="restaurant__card">
-                    <h3 class="restaurant__dish">Poulet rôti aux herbes de Provence</h3>
-                    <div class="restaurant__dishdetail">
-                        <p class="restaurant__dishdetail--light">Et sa crème de truffe</p>
-                        <p class="restaurant__dishdetail--bold">40€</p>
+                    <input class="restaurant__card--checkbox" id="dish-selected-m1" type="checkbox">
+                    <label for="dish-selected-m1" class="restaurant__card--unselected">
+                        <h3 class="restaurant__dish">Poulet rôti aux herbes de Provence</h3>
+                        <div class="restaurant__dishdetail">
+                            <p class="restaurant__dishdetail--light">Et sa crème de truffe</p>
+                            <p class="restaurant__dishdetail--bold">40€</p>
+                        </div>
+                    </label>
+                    <div class="restaurant__card--selected">
+                        <i class="fa-solid fa-circle-check"></i>
                     </div>
                 </div>
                 <div class="restaurant__card">
-                    <h3 class="restaurant__dish">Langouste rôtie</h3>
-                    <div class="restaurant__dishdetail">
-                        <p class="restaurant__dishdetail--light">Et ses légumes de saison</p>
-                        <p class="restaurant__dishdetail--bold">35€</p>
+                    <input class="restaurant__card--checkbox" id="dish-selected-m2" type="checkbox">
+                    <label for="dish-selected-m2" class="restaurant__card--unselected">
+                        <h3 class="restaurant__dish">Langouste rôtie</h3>
+                        <div class="restaurant__dishdetail">
+                            <p class="restaurant__dishdetail--light">Et ses légumes de saison</p>
+                            <p class="restaurant__dishdetail--bold">35€</p>
+                        </div>
+                    </label>
+                    <div class="restaurant__card--selected">
+                        <i class="fa-solid fa-circle-check"></i>
                     </div>
                 </div>
                 <div class="restaurant__card">
-                    <h3 class="restaurant__dish">Côte de bœuf Angus</h3>
-                    <div class="restaurant__dishdetail">
-                        <p class="restaurant__dishdetail--light">Et sa purée de panais</p>
-                        <p class="restaurant__dishdetail--bold">44€</p>
+                    <input class="restaurant__card--checkbox" id="dish-selected-m3" type="checkbox">
+                    <label for="dish-selected-m3" class="restaurant__card--unselected">
+                        <h3 class="restaurant__dish">Côte de bœuf Angus</h3>
+                        <div class="restaurant__dishdetail">
+                            <p class="restaurant__dishdetail--light">Et sa purée de panais</p>
+                            <p class="restaurant__dishdetail--bold">44€</p>
+                        </div>
+                    </label>
+                    <div class="restaurant__card--selected">
+                        <i class="fa-solid fa-circle-check"></i>
                     </div>
                 </div>
             </div>
             <div class="restaurant__setmenu">
                 <h2 class="restaurant__menutitle">DESSERTS</h2>
                 <div class="restaurant__card">
-                    <h3 class="restaurant__dish">Farandole de desserts</h3>
-                    <div class="restaurant__dishdetail">
-                        <p class="restaurant__dishdetail--light">Du chef</p>
-                        <p class="restaurant__dishdetail--bold">18€</p>
+                    <input class="restaurant__card--checkbox" id="dish-selected-d1" type="checkbox">
+                    <label for="dish-selected-d1" class="restaurant__card--unselected">
+                        <h3 class="restaurant__dish">Farandole de desserts</h3>
+                        <div class="restaurant__dishdetail">
+                            <p class="restaurant__dishdetail--light">Du chef</p>
+                            <p class="restaurant__dishdetail--bold">18€</p>
+                        </div>
+                    </label>
+                    <div class="restaurant__card--selected">
+                        <i class="fa-solid fa-circle-check"></i>
                     </div>
                 </div>
                 <div class="restaurant__card">
-                    <h3 class="restaurant__dish">Crème brulée</h3>
-                    <div class="restaurant__dishdetail">
-                        <p class="restaurant__dishdetail--light">Revisitée</p>
-                        <p class="restaurant__dishdetail--bold">22€</p>
+                    <input class="restaurant__card--checkbox" id="dish-selected-d2" type="checkbox">
+                    <label for="dish-selected-d2" class="restaurant__card--unselected">
+                        <h3 class="restaurant__dish">Crème brulée</h3>
+                        <div class="restaurant__dishdetail">
+                            <p class="restaurant__dishdetail--light">Revisitée</p>
+                            <p class="restaurant__dishdetail--bold">22€</p>
+                        </div>
+                    </label>
+                    <div class="restaurant__card--selected">
+                        <i class="fa-solid fa-circle-check"></i>
                     </div>
                 </div>
                 <div class="restaurant__card">
-                    <h3 class="restaurant__dish">Tiramisu</h3>
-                    <div class="restaurant__dishdetail">
-                        <p class="restaurant__dishdetail--light">À la noisette</p>
-                        <p class="restaurant__dishdetail--bold">23€</p>
+                    <input class="restaurant__card--checkbox" id="dish-selected-d3" type="checkbox">
+                    <label for="dish-selected-d3" class="restaurant__card--unselected">
+                        <h3 class="restaurant__dish">Tiramisu</h3>
+                        <div class="restaurant__dishdetail">
+                            <p class="restaurant__dishdetail--light">À la noisette</p>
+                            <p class="restaurant__dishdetail--bold">23€</p>
+                        </div>
+                    </label>
+                    <div class="restaurant__card--selected">
+                        <i class="fa-solid fa-circle-check"></i>
                     </div>
                 </div>
             </div>
@@ -139,7 +193,7 @@
                 <a class="footer__link footer__bold" href="#">Devenir partenaire</a>
             </li>
             <li><a class="footer__link footer__light" href="#">Mentions légales</a></li>
-            <li><a class="footer__link footer__light" href="#">Contact</a></li>
+            <li><a class="footer__link footer__light" href="mailto:ohmyfood@example.com">Contact</a></li>
         </ul>
     </footer>
 </body>
