WIP des animations

--- a/restaurants/palette_du_gout.html
+++ b/restaurants/palette_du_gout.html
@@ -53,7 +53,7 @@
             </div>
             <div class="restaurant__setmenu">
                 <h2 class="restaurant__menutitle">ENTRÉES</h2>
-                <div class="restaurant__card">
+                <div class="restaurant__card restaurant__card--starters">
                     <input class="restaurant__card--checkbox" id="dish-selected-s1" type="checkbox">
                     <label for="dish-selected-s1" class="restaurant__card--unselected">
                         <h3 class="restaurant__dish">Fricassée d'escargots</h3>
@@ -66,7 +66,7 @@
                         <i class="fa-solid fa-circle-check"></i>
                     </div>
                 </div>
-                <div class="restaurant__card">
+                <div class="restaurant__card restaurant__card--starters">
                     <input class="restaurant__card--checkbox" id="dish-selected-s2" type="checkbox">
                     <label for="dish-selected-s2" class="restaurant__card--unselected">
                         <h3 class="restaurant__dish">Foie gras de canard mi-cuit</h3>
@@ -79,7 +79,7 @@
                         <i class="fa-solid fa-circle-check"></i>
                     </div>
                 </div>
-                <div class="restaurant__card">
+                <div class="restaurant__card restaurant__card--starters">
                     <input class="restaurant__card--checkbox" id="dish-selected-s3" type="checkbox">
                     <label for="dish-selected-s3" class="restaurant__card--unselected">
                         <h3 class="restaurant__dish">Oeuf au plat</h3>
@@ -95,7 +95,7 @@
             </div>
             <div class="restaurant__setmenu">
                 <h2 class="restaurant__menutitle">PLATS</h2>
-                <div class="restaurant__card">
+                <div class="restaurant__card restaurant__card--mains">
                     <input class="restaurant__card--checkbox" id="dish-selected-m1" type="checkbox">
                     <label for="dish-selected-m1" class="restaurant__card--unselected">
                         <h3 class="restaurant__dish">Filet de boeuf aux herbes</h3>
@@ -108,7 +108,7 @@
                         <i class="fa-solid fa-circle-check"></i>
                     </div>
                 </div>
-                <div class="restaurant__card">
+                <div class="restaurant__card restaurant__card--mains">
                     <input class="restaurant__card--checkbox" id="dish-selected-m2" type="checkbox">
                     <label for="dish-selected-m2" class="restaurant__card--unselected">
                         <h3 class="restaurant__dish">Parmentier de queue de boeuf</h3>
@@ -121,7 +121,7 @@
                         <i class="fa-solid fa-circle-check"></i>
                     </div>
                 </div>
-                <div class="restaurant__card">
+                <div class="restaurant__card restaurant__card--mains">
                     <input class="restaurant__card--checkbox" id="dish-selected-m3" type="checkbox">
                     <label for="dish-selected-m3" class="restaurant__card--unselected">
                         <h3 class="restaurant__dish">Filet de turbo</h3>
@@ -137,7 +137,7 @@
             </div>
             <div class="restaurant__setmenu">
                 <h2 class="restaurant__menutitle">DESSERTS</h2>
-                <div class="restaurant__card">
+                <div class="restaurant__card restaurant__card--desserts">
                     <input class="restaurant__card--checkbox" id="dish-selected-d1" type="checkbox">
                     <label for="dish-selected-d1" class="restaurant__card--unselected">
                         <h3 class="restaurant__dish">Paris-Brest</h3>
@@ -150,7 +150,7 @@
                         <i class="fa-solid fa-circle-check"></i>
                     </div>
                 </div>
-                <div class="restaurant__card">
+                <div class="restaurant__card restaurant__card--desserts">
                     <input class="restaurant__card--checkbox" id="dish-selected-d2" type="checkbox">
                     <label for="dish-selected-d2" class="restaurant__card--unselected">
                         <h3 class="restaurant__dish">Macaron au chocolat d'exception</h3>
@@ -163,7 +163,7 @@
                         <i class="fa-solid fa-circle-check"></i>
                     </div>
                 </div>
-                <div class="restaurant__card">
+                <div class="restaurant__card restaurant__card--desserts">
                     <input class="restaurant__card--checkbox" id="dish-selected-d3" type="checkbox">
                     <label for="dish-selected-d3" class="restaurant__card--unselected">
                         <h3 class="restaurant__dish">Mousse au chocolat</h3>
